RESOLVED FIXED89429
[Mac] AudioFileReader::createBus() leaks an AudioBufferList if ExtAudioFileRead() returns an error
https://bugs.webkit.org/show_bug.cgi?id=89429
Summary [Mac] AudioFileReader::createBus() leaks an AudioBufferList if ExtAudioFileRe...
Andy Estes
Reported 2012-06-18 23:17:34 PDT
[Mac] AudioFileReader::createBus() leaks an AudioBufferList if ExtAudioFileRead() returns an error
Attachments
Patch (1.62 KB, patch)
2012-06-18 23:23 PDT, Andy Estes
no flags
Andy Estes
Comment 1 2012-06-18 23:23:24 PDT
WebKit Review Bot
Comment 2 2012-06-19 08:45:22 PDT
Comment on attachment 148259 [details] Patch Clearing flags on attachment: 148259 Committed r120718: <http://trac.webkit.org/changeset/120718>
WebKit Review Bot
Comment 3 2012-06-19 08:45:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.