[Mac] AudioFileReader::createBus() leaks an AudioBufferList if ExtAudioFileRead() returns an error https://bugs.webkit.org/show_bug.cgi?id=89429

Reviewed by Darin Adler.

* platform/audio/mac/AudioFileReaderMac.cpp:
(WebCore::AudioFileReader::createBus): Call destroyAudioBufferList()
before returning if ExtAudioFileRead() returns an error.


Canonical link: https://commits.webkit.org/107328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120718 268f45cc-cd09-0410-ab3c-d52691b4dbfc